# kvlt

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  clippy.toml  package.json  rustfmt.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/notes/: note-002.md  note-004.md  note-005.md  note-007.md  note-009.md  note-010.md  note-012.md  note-013.md  note-014.md  note-016.md  note-019.md  note-020.md  note-022.md  note-026.md  note-027.md  note-028.md  note-033.md  note-034.md  note-037.md  note-041.md  note-045.md  note-050.md  note-051.md  note-052.md  note-054.md  note-056.md  note-058.md  note-059.md  note-060.md  note-066.md  note-067.md  note-070.md  note-072.md  note-073.md  note-075.md  note-077.md  note-078.md  note-079.md  note-080.md  note-082.md  (+52 more)
libs/inkd_math/: Cargo.toml
programs/inkd_core/: Cargo.toml
programs/inkd_core/src/: events.rs
programs/inkd_core/src/instructions/: mod.rs  register_issuer.rs  verify.rs
sdk/: jest.config.js  package.json  tsconfig.json
sdk/src/: client.ts  types.ts
tests/: integration.test.ts
