[package]
name = "inkd_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for interacting with the Inkd program."

[[bin]]
name = "inkd"
path = "src/main.rs"

[dependencies]
inkd_math = { path = "../libs/inkd_math" }
